fix: remove extra padding

--- a/portfolio-site/src/components/Sidebar/styles.css
+++ b/portfolio-site/src/components/Sidebar/styles.css
@@ -67,7 +67,10 @@
   #sidebar {
     width: 100%;
     position: relative;
-    height: 100vh;
+
+    padding-top: 0;
+    padding-left: 0;
+    padding-right: 0;
 
     align-items: center;
     justify-content: center;
